# Aerostat

./: README.md  pyproject.toml
aerostat/: cli.py
aerostat/core/: __init__.py  aws_login.py  cdk.py  checks.py  utils.py
aerostat/core/deploy/: aws.py
aerostat/deployment/aws/: predict.py  router.py
aerostat/deployment/aws/excel/: __init__.py  serve_excel.py  template.py
