[tool.poetry]
name = "aerostat-launcher"
version = "0.0.9"
description = "A simple CLI tool to deploy your Machine Learning models to cloud, with public API and connection templates ready to go."
authors = ["Vincent Yan <vincent.yan@blend360.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/vinceyyy/Aerostat"
repository = "https://github.com/vinceyyy/Aerostat"
keywords = ["machine learning deployment", "cloud", "api"]
packages = [
    {include = "aerostat"}
]

[tool.poetry.scripts]
aerostat = 'aerostat.cli:app'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
questionary = "^2.0.1"
jinja2 = "^3.1.4"
aws-cdk-lib = "^2.147.0"
aws-lambda-powertools = "^2.39.1"
aws-cdk-aws-lambda-python-alpha = "^2.147.0a0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
